Update Megan.html for Iza

--- a/Megan.html
+++ b/Megan.html
@@ -79,7 +79,7 @@
     </style>
 </head>
 <body>
-    <h1>Thank you for being my friend for one year ❤️</h1>
+    <h1>Congratulations Iza and Matt for getting married! ❤️</h1>
     <div class="hearts"></div>
 
     <script>
